--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ cython_debug/
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode
+.vscode/
